Fix requirements.txt: add gunicorn and psycopg2-binary for Render deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,7 @@ tzdata==2025.2
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.14
+
+# REQUIRED FOR DEPLOYMENT:
+gunicorn==22.0.0
+psycopg2-binary==2.9.9
