--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 ﻿amqp==5.3.1
 asgiref==3.10.0
 billiard==4.2.2
+boto3==1.40.76
+botocore==1.40.76
 celery==5.5.3
 certifi==2025.11.12
 charset-normalizer==3.4.4
@@ -15,16 +17,18 @@ django-redis==6.0.0
 djangorestframework==3.16.1
 gunicorn==23.0.0
 idna==3.11
+jmespath==1.0.1
 kombu==5.5.4
-numpy==2.3.4
 packaging==25.0
 pandas==2.3.3
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 redis==7.0.1
 requests==2.32.5
+s3transfer==0.14.0
 six==1.17.0
 sqlparse==0.5.3
 supervisor==4.3.0
@@ -32,3 +36,4 @@ tzdata==2025.2
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.14
+whitenoise==6.11.0
